Changed file name

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <build>
+        <finalName>UwUCore</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
