Changed console permission to *

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,5 @@ commands:
     permission: uwucore.heal
   broadcast:
     permission: uwucore.broadcast
-  console:
-    permission: uwucore.console
+  console: {}
   config: {}
