--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,9 +5,7 @@ api-version: 1.18
 authors: [ Aroze ]
 description: A simple set of core commands for your Minecraft server!
 commands:
-  heal:
-    permission: uwucore.heal
-  broadcast:
-    permission: uwucore.broadcast
+  heal: {}
+  broadcast: {}
   console: {}
   config: {}
