Added aliases for broadcast

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,7 @@ authors: [ Aroze ]
 description: A simple set of core commands for your Minecraft server!
 commands:
   heal: {}
-  broadcast: {}
+  broadcast:
+    aliases: [ bc, announce ]
   console: {}
   config: {}
