--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,9 +5,11 @@ api-version: 1.18
 authors: [ Aroze ]
 description: A simple set of core commands for your Minecraft server!
 commands:
-  heal: {}
+  rgbArmor:
+    aliases: [ rgbArmour ]
   broadcast:
     aliases: [ bc, announce ]
+  heal: {}
   console: {}
   config: {}
   test: {}
