--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: UwUCore
 version: '${project.version}'
-main: me.aroze.uwucore.Commands.UwUCore
+main: me.aroze.uwucore.UwUCore
 api-version: 1.18
 authors: [ Aroze ]
 description: A simple set of core commands for your Minecraft server!
