--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,8 +5,8 @@ api-version: 1.18
 authors: [ Aroze ]
 description: A simple set of core commands for your Minecraft server!
 commands:
-  rgbArmor:
-    aliases: [ rgbArmour ]
+  rgbarmor:
+    aliases: [ rgbarmour ]
   broadcast:
     aliases: [ bc, announce ]
   heal: {}
