--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,5 @@ commands:
   test: {}
   kittygun:
     aliases: [ kittycannon, kittyshooter, catgun, catcannon, catshooter, kittengun, kittencannon, kittenshooter ]
+  vanish:
+    aliases: [ v, sv, van ]
