custom /msg (should) now override the default /msg command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,5 +23,5 @@ commands:
     aliases: [ pt ]
   reply:
     aliases: [ r ]
-  message:
-    aliases: [ msg, m ]
+  msg:
+    aliases: [ message, m ]
